assets/css/style.scss
---
---

@import "{{ site.theme }}";

/* Make body at least as tall as the viewport and set up flexbox */
body {
  min-width: min-content;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  --corner-radius: 6px;
}

/* Put a fake header border inside element */
#header_wrap {
  box-shadow: inset 0 -1px #111;
}

/* Hang the banner below the header, use link color as background */
#forkme_banner {
  top: 100%;
  color: revert;
  background-color: currentColor;
  border-bottom-left-radius: var(--corner-radius);
  border-bottom-right-radius: var(--corner-radius);
}

#forkme_label {
  color: #fff;
}

/* Make main content fill all remaining space after header/footer is accounted for */
#main_content_wrap {
  border-top: none;
  box-shadow: inset 0 10px 10px -10px rgba(0,0,0,0.5);
  flex: 1;
}

/* Make content wider and reduce padding around header and content */
.inner {
  max-width: 840px;
  padding: 15px 10px 15px 10px !important;
}

/* Give images block layout and a shadow (same as on code blocks) */
p img {
  display: block;
  box-shadow: 0 0 10px rgba(0,0,0,0.1);
}

/* Limit image and code blocks to colum width, with some margin either side */
.highlighter-rouge,
p img {
  max-width: calc(100% - 2.4rem);
  margin-inline: auto;
}

/* Remove border effect from code blocks */
pre.highlight {
  contain: paint layout style inline-size;
  padding: 0;
  background-color: #fcfaf8;
}

/* Remove border effect from code blocks and add more internal padding */
pre.highlight code {
  width: max-content; /* Without this, width is taken from parent scroll block */
  padding: 8px;
  margin: 0;
  background-color: transparent;
}

/* Leave space above hr tags for layout */
hr {
  margin-top: 60px;
}

/* Tighter spacing in header */
#project_tagline {
  margin: 0;
  padding: 0;
}

/* Hide markers on nested list items */
li li {
  list-style: none;
}

/* Add some margin between nested list items */
li li + li {
  margin-top: 0.3ex;
}

/* Reduce margin after nested uls */
li ul {
  margin-bottom: 0.6ex;
}

/* Prefix footnote references with '[' */
.footnote::before {
  content: "[";
}

/* Suffix footnote references with ']' */
.footnote::after {
  content: "]";
}

/* Add line between main content and footnotes, adjust spacing */
.footnotes {
  border-top: solid 2px black;
  margin-top: 3em;
  padding-top: 0.7em;
}

/* Adjust footnote spacing */
.footnotes p {
  margin: 0.25em 0;
}

/* Restore user-agent link colors */
a {
  color: revert;
}

/* Don't apply link color in header */
header :is(h1, h2) a {
  color: inherit;
}

.home-link-icon {
  height: 0.6em;
  padding-inline-start: 0.3em;
}

.home-link {
  display: flex;
  align-items: baseline;
  width: max-content;
}

/* Link icon matches text color by default, gets link color on hover/focus */
.home-link:not(:hover, :focus) {
  color: inherit;
}

.post-tags {
  display: flex;
  column-gap: 1em;
  flex-wrap: wrap;
  padding-left: 0;
}

.post-tags > li {
  background-color: lightgrey;
  border-radius: 1000px;
  padding-inline: 0.6em;
}

@media screen and (max-width: 480px) {
  /* Reduce top and bottom padding */
  #forkme_banner {
    padding: 4px 44px 4px 8px;
  }

  /* Break label over two lines, centred  */
  #forkme_label {
    display: block;
    width: min-content;
    text-align: center;
    line-height: 1.1;
  }
}

